tests/base/invalid/Void_CompileFail_1.whiley
import * from whiley.lang.*

void f(void z):

